--- a/src/xrCore/xrCore.vcxproj.filters
+++ b/src/xrCore/xrCore.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="xrCore.cpp">
       <Filter>Kernel</Filter>
     </ClCompile>
+    <ClCompile Include="ModuleLookup.cpp">
+      <Filter>Kernel</Filter>
+    </ClCompile>
     <ClCompile Include="_compressed_normal.cpp">
       <Filter>Math</Filter>
     </ClCompile>
@@ -399,6 +402,9 @@
       <Filter>Kernel</Filter>
     </ClInclude>
     <ClInclude Include="xrCore.h">
+      <Filter>Kernel</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleLookup.hpp">
       <Filter>Kernel</Filter>
     </ClInclude>
     <ClInclude Include="Platform.h">
