--- a/src/editors/ActorEditor/ActorEditor.vcxproj.filters
+++ b/src/editors/ActorEditor/ActorEditor.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Sourse FIles">
+    <Filter Include="Source Files">
       <UniqueIdentifier>{9a41bbda-99f4-484a-ba8a-63332bf95144}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header Files">
@@ -10,46 +10,46 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ActorEditor.cpp">
-      <Filter>Sourse FIles</Filter>
+      <Filter>Source FIles</Filter>
     </ClCompile>
     <ClCompile Include="BonePart.cpp">
-      <Filter>Sourse FIles</Filter>
+      <Filter>Source FIles</Filter>
     </ClCompile>
     <ClCompile Include="BottomBar.cpp">
-      <Filter>Sourse FIles</Filter>
+      <Filter>Source FIles</Filter>
     </ClCompile>
     <ClCompile Include="ClipEditor.cpp">
-      <Filter>Sourse FIles</Filter>
+      <Filter>Source FIles</Filter>
     </ClCompile>
     <ClCompile Include="KeyBar.cpp">
-      <Filter>Sourse FIles</Filter>
+      <Filter>Source FIles</Filter>
     </ClCompile>
     <ClCompile Include="LeftBar.cpp">
-      <Filter>Sourse FIles</Filter>
+      <Filter>Source FIles</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
-      <Filter>Sourse FIles</Filter>
+      <Filter>Source FIles</Filter>
     </ClCompile>
     <ClCompile Include="Splash.cpp">
-      <Filter>Sourse FIles</Filter>
+      <Filter>Source FIles</Filter>
     </ClCompile>
     <ClCompile Include="TopBar.cpp">
-      <Filter>Sourse FIles</Filter>
+      <Filter>Source FIles</Filter>
     </ClCompile>
     <ClCompile Include="UI_ActorMain.cpp">
-      <Filter>Sourse FIles</Filter>
+      <Filter>Source FIles</Filter>
     </ClCompile>
     <ClCompile Include="UI_ActorTools.cpp">
-      <Filter>Sourse FIles</Filter>
+      <Filter>Source FIles</Filter>
     </ClCompile>
     <ClCompile Include="UI_ActorToolsMotions.cpp">
-      <Filter>Sourse FIles</Filter>
+      <Filter>Source FIles</Filter>
     </ClCompile>
     <ClCompile Include="UI_ActorToolsProps.cpp">
-      <Filter>Sourse FIles</Filter>
+      <Filter>Source FIles</Filter>
     </ClCompile>
     <ClCompile Include="UI_ActorToolsUndo.cpp">
-      <Filter>Sourse FIles</Filter>
+      <Filter>Source FIles</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
