--- a/src/editors/LevelEditor/LevelEditor.vcxproj
+++ b/src/editors/LevelEditor/LevelEditor.vcxproj
@@ -16,7 +16,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{136857E3-D61B-4A03-A4E9-7F73ED946C41}</ProjectGuid>
-    <RootNamespace>le</RootNamespace>
+    <RootNamespace>LevelEditor</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
