PPEditor: fixed includes and formatted code
+ add stdafx missing in project file

--- a/src/editors/PPEditor/PPEditor.vcxproj
+++ b/src/editors/PPEditor/PPEditor.vcxproj
@@ -47,6 +47,7 @@
     <ClInclude Include="NoiseGen.h" />
     <ClInclude Include="single_param.h" />
     <ClInclude Include="spline.h" />
+	<ClInclude Include="stdafx.h" />
     <ClInclude Include="Unit6.h" />
     <ClInclude Include="Unit7.h" />
     <ClInclude Include="Unit8.h" />
