Remove boost::noncopyable references (#96).

--- a/src/xrCore/xrCore.vcxproj
+++ b/src/xrCore/xrCore.vcxproj
@@ -294,6 +294,7 @@
   <ItemGroup>
     <ClInclude Include="..\common\GUID.hpp" />
     <ClInclude Include="..\common\LevelStructure.hpp" />
+    <ClInclude Include="..\Common\Noncopyable.hpp" />
     <ClInclude Include="..\common\object_broker.h" />
     <ClInclude Include="..\common\object_cloner.h" />
     <ClInclude Include="..\common\object_comparer.h" />
